--- a/index.html
+++ b/index.html
@@ -6,9 +6,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cristian Villalobos - Physicist</title>
-    <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Montserrat:wght@600&display=swap"
-        rel="stylesheet">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Font Awesome for Icons -->
@@ -29,7 +26,7 @@
             <div class="d-flex flex-wrap justify-content-between align-items-center">
                 <!-- Logo -->
                 <div class="mb-3 mb-md-0">
-                    <img src="path-to-your-logo.png" alt="Lab Logo" width="100" height="100" class="img-fluid">
+                    <img src="path-to-your-logo.png" alt="Lab Logo" width="100" height="100">
                 </div>
                 <!-- Navigation Menu -->
                 <nav>
@@ -49,15 +46,13 @@
             </div>
             <!-- Detailed Contact Information -->
             <div class="mt-4">
-                <p><i class="fas fa-university"></i> Instituto de Física, Pontificia Universidad Católica de Valparaíso
+                <p><i class="fas fa-university"></i> Universidad de Chile
                 </p>
-                <p><i class="fas fa-map-marker-alt"></i> Av. Universidad 330 (Curauma), Valparaíso, Chile.</p>
-                <p><i class="fas fa-phone"></i> Office: +56 32 2274889</p>
-                <p><i class="fas fa-phone-alt"></i> Lab: +56 32 2274987</p>
+                <p><i class="fas fa-map-marker-alt"></i> Beauchef 850, Santiago, Chile.</p>
                 <p><i class="fas fa-envelope"></i> <a href="mailto:cristian.villalobos@ug.uchile.cl"
                         class="text-white">cristian.villalobos@ug.uchile.cl</a></p>
-                <p><i class="fas fa-flask"></i> Interests: Bacterial Suspensions, Confined Dynamics, Nonlinear Physics
-                </p>
+                <p><i class="fas fa-flask"></i> Interest in: Bacterial Suspensions - Confined Dynamics - Nonlinear
+                    Physics</p>
                 <!-- Social Media Links -->
                 <p>
                     <a href="https://github.com/VillalobosCristian" target="_blank" class="text-white me-3"
@@ -74,13 +69,13 @@
     </header>
 
     <!-- Hero Section -->
-    <section id="hero">
+    <section id="hero" class="py-5 bg-light">
         <div class="container text-center">
             <!-- Professional Photo -->
             <img src="path-to-your-photo.jpg" alt="Cristian Villalobos" class="rounded-circle mb-4" width="200"
                 height="200">
             <!-- Introduction Text -->
-            <h2>Research</h2>
+            <h2 class="mb-3">Welcome to My Professional Portfolio</h2>
             <p class="lead">I am Cristian Villalobos, a physicist specializing in bacterial suspension dynamics and
                 confined space phenomena. Explore my work, publications, and notes below.</p>
             <!-- Call to Action Buttons -->
@@ -90,7 +85,7 @@
     </section>
 
     <!-- Publications Section -->
-    <section id="publications">
+    <section id="publications" class="py-5">
         <div class="container">
             <h2 class="text-center mb-4">Publications</h2>
             <div id="publications-list">
@@ -101,7 +96,7 @@
     </section>
 
     <!-- Current Research Section -->
-    <section id="current-research">
+    <section id="current-research" class="py-5 bg-light">
         <div class="container">
             <h2 class="text-center mb-4">Current Research</h2>
             <div class="row">
@@ -151,10 +146,10 @@
     </section>
 
     <!-- Research Interests Section -->
-    <section id="research-interests">
+    <section id="research-interests" class="py-5">
         <div class="container">
             <h2 class="text-center mb-4">Research Interests</h2>
-            <ul class="list-group list-group-flush text-center">
+            <ul class="list-group list-group-flush">
                 <li class="list-group-item">Active matter and bacterial suspensions</li>
                 <li class="list-group-item">Stochastic modeling and numerical simulations</li>
                 <li class="list-group-item">Particle dynamics in confined systems</li>
@@ -164,7 +159,7 @@
     </section>
 
     <!-- Latest Publications/Projects Section -->
-    <section id="latest-work">
+    <section id="latest-work" class="py-5 bg-light">
         <div class="container">
             <h2 class="text-center mb-4">Latest Publications & Projects</h2>
             <div class="row latest-work">
@@ -202,7 +197,7 @@
     </section>
 
     <!-- Contact Section -->
-    <section id="contact">
+    <section id="contact" class="py-5">
         <div class="container">
             <h2 class="text-center mb-4">Contact Me</h2>
             <div class="row justify-content-center">
@@ -232,7 +227,7 @@
     </section>
 
     <!-- Footer Section -->
-    <footer>
+    <footer class="bg-secondary text-white text-center py-3">
         <div class="container">
             <p>&copy; <span id="current-year"></span> Cristian Villalobos</p>
             <nav>
