--- a/index.html
+++ b/index.html
@@ -30,31 +30,25 @@
     <header class="bg-primary text-white py-4">
         <div class="container">
             <div class="d-flex flex-wrap justify-content-between align-items-center">
-                <!-- Logo -->
-                <div class="mb-3 mb-md-0">
-                    <a href="index.html" class="text-white text-decoration-none">
-
-                        <!-- Alternatively, use a text logo -->
-                        <!-- <h1>Cristian Villalobos</h1> -->
-                    </a>
-                </div>
                 <!-- Navigation Menu -->
-            <nav>
-                <ul class="nav">
-                    <li class="nav-item"><a class="nav-link text-white active" href="index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link text-white" href="curriculum.html">Curriculum</a></li>
-                    <li class="nav-item"><a class="nav-link text-white" href="publications.html">Publications</a></li>
-                    <li class="nav-item"><a class="nav-link text-white" href="notes.html">Notes</a></li>
-                    <li class="nav-item"><a class="nav-link text-white" href="gallery.html">Gallery</a></li>
-                    <!-- New Gallery Link -->
-                   
-                </ul>
-            </nav>
+                <nav>
+                    <ul class="nav">
+                        <li class="nav-item"><a class="nav-link text-white active" href="index.html">Home</a></li>
+                        <li class="nav-item"><a class="nav-link text-white" href="curriculum.html">Curriculum</a></li>
+                        <li class="nav-item"><a class="nav-link text-white" href="publications.html">Publications</a>
+                        </li>
+                        <li class="nav-item"><a class="nav-link text-white" href="notes.html">Notes</a></li>
+                        <li class="nav-item"><a class="nav-link text-white" href="gallery.html">Gallery</a></li>
+                    </ul>
+                </nav>
 
-                <!-- Dark Mode Toggle Button -->
-                <button id="dark-mode-toggle" class="btn btn-outline-light" aria-label="Toggle Dark Mode">
+                <!-- Removed Dark Mode Toggle Button -->
+                <!--
+                <button id="dark-mode-toggle" class="btn btn-outline-light" aria-label="Toggle Dark Mode"
+                    aria-pressed="false">
                     <i class="fas fa-moon"></i>
                 </button>
+                -->
             </div>
             <!-- Detailed Contact Information -->
             <div class="mt-4">
@@ -82,8 +76,6 @@
     <!-- Hero Section -->
     <section id="hero" class="py-5 bg-light">
         <div class="container text-center">
-            <!-- Professional Photo -->
-
             <!-- Introduction Text -->
             <p class="lead">I am Cristian Villalobos, a Chilean physicist specializing in bacterial suspension dynamics
                 and confinement effects. Explore my work, publications, and notes from my courses below.</p>
@@ -104,7 +96,7 @@
                     <div class="card h-100 w-100">
                         <div class="row g-0">
                             <div class="col-md-6">
-                                <img src="figures/Fig_DE.png" alt="Active bacterial bath in droplets" class="img-fluid"
+                                <img src="Figures/Fig_DE.png" alt="Active bacterial bath in droplets" class="img-fluid"
                                     loading="lazy">
                             </div>
                             <div class="col-md-6 d-flex flex-column">
@@ -127,7 +119,7 @@
                     <div class="card h-100 w-100">
                         <div class="row g-0">
                             <div class="col-md-6">
-                                <img src="figures/Crater_Formation.png" alt="Crater Formation Dynamics"
+                                <img src="Figures/Crater_Formation.png" alt="Crater Formation Dynamics"
                                     class="img-fluid" loading="lazy">
                             </div>
                             <div class="col-md-6 d-flex flex-column">
@@ -144,7 +136,7 @@
                                         particularly in protoplanetary disks. This paper was selected as the
                                         <strong>cover of the journal Granular Matter in May 2022</strong>.
                                     </p>
-                                    <img src="figures/Portada_crater.png" alt="Journal Cover" class="img-fluid mt-auto"
+                                    <img src="Figures/Portada_crater.png" alt="Journal Cover" class="img-fluid mt-auto"
                                         loading="lazy">
                                     <p class="text-center mt-2"><em>Cover of Granular Matter, May 2022</em></p>
                                 </div>
@@ -211,7 +203,7 @@
     <!-- Footer Section -->
     <footer class="bg-secondary text-white text-center py-3">
         <div class="container">
-            <p>&copy; <span id="current-year"></span> Cristian Villalobos</p>
+            <p>&copy; <span id="current-year"></span> Cristian Villalobos-Conchaa</p>
             <nav>
                 <ul class="nav justify-content-center">
                     <li class="nav-item"><a class="nav-link text-white" href="terms.html">Terms</a></li>
@@ -225,7 +217,7 @@
     </footer>
 
     <!-- Back to Top Button -->
-    <button id="back-to-top" aria-label="Back to Top">
+    <button id="back-to-top" aria-label="Back to Top" class="btn btn-primary btn-lg rounded-circle" title="Back to Top">
         <i class="fas fa-chevron-up"></i>
     </button>
 
@@ -233,6 +225,10 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Custom Scripts -->
     <script src="scripts.js"></script>
+    <script>
+        // Script to update the current year in the footer
+        document.getElementById("current-year").textContent = new Date().getFullYear();
+    </script>
 </body>
 
 </html>
