--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Font Awesome for Icons -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap" rel="stylesheet">
     <!-- Custom Stylesheet -->
     <link rel="stylesheet" href="styles.css">
     <!-- Marked.js for Markdown Parsing (if needed) -->
@@ -98,6 +98,7 @@
                             <div class="col-md-6">
                                 <img src="Figures/Fig_DE.png" alt="Active bacterial bath in droplets" class="img-fluid"
                                     loading="lazy">
+                                    <img src="Gif/DE_experiment.gif" alt="Double Emulsion Experiment" class="card-img-top" loading="lazy">
                             </div>
                             <div class="col-md-6 d-flex flex-column">
                                 <div class="card-body">
@@ -114,6 +115,7 @@
                         </div>
                     </div>
                 </div>
+
                 <!-- Research Project 2 -->
                 <div class="col-lg-6 d-flex align-items-stretch mb-4">
                     <div class="card h-100 w-100">
